--- a/index.html
+++ b/index.html
@@ -85,13 +85,55 @@
         </div>
 
         <!-- Carousel -->
-        <div id="carouselExampleSlidesOnly" class="carousel slide py-5" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="img/index/carousel1.jpeg" class="d-block w-100" alt="...">
+        <div class="container-fluid px-3 py-5">
+            <div class="container p-0">
+                <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="img/cars/jaguar/test_jaguar.jpg" class="d-block w-100 h-50" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/cars/jaguar/test_jaguar.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/cars/jaguar/test_jaguar.jpg" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
                 </div>
-                <div class="carousel-item">
-                    <img src="img/index/carousel2.jpeg" class="d-block w-100" alt="...">
+                <div>
+                    <p class="pt-3" style="text-align: justify">
+                        Wypożyczalnia Samochodów Sportowych i Luksusowych Limuzyn w Zielonej Górze i Zachodniej Polsce – Tedicars<br>
+
+                        Jeżeli poszukujesz wypożyczalni samochodów sportowych lub luksusowych limuzyn w Zielonej Górze oraz całej Zachodniej Polsce,
+                        Tedicars.pl jest odpowiednim miejscem! Oferujemy wynajem ekskluzywnych samochodów na każdą okazję, dostarczając auta zarówno
+                        w obrębie regionu, jak i na terenie całej Polski. Nasze pojazdy zapewniają najwyższy komfort, moc i styl, a dodatkowo oferujemy
+                        szeroki wachlarz usług, w tym wynajem z kierowcą oraz obsługę wydarzeń okolicznościowych.<br><br>
+
+                        Wynajem Samochodów w Całej Polsce – Dowóz i Odbiór Aut<br>
+                        W Tedicars dbamy o wygodę naszych klientów, dlatego oferujemy możliwość dostarczenia samochodu bezpośrednio pod wskazany adres
+                        na terenie całej Polski, a także odbiór auta po zakończonym wynajmie. Niezależnie od tego, czy znajdujesz się w Zielonej Górze,
+                        Zachodniej Polsce, czy w innych regionach kraju, nasza wypożyczalnia umożliwia wynajem na dowolny okres i elastyczne warunki
+                        dostawy pojazdu.<br><br>
+
+                        Obsługa Lotnisk i Wynajem z Kierowcą<br>
+                        Nasza oferta obejmuje także transport z i na lotniska. Obsługujemy lotniska w Poznaniu, Wrocławiu oraz Berlinie, zapewniając
+                        luksusowy transfer na najwyższym poziomie. Dla tych, którzy potrzebują dodatkowego komfortu, oferujemy wynajem samochodów
+                        z kierowcą, co sprawia, że podróż staje się jeszcze bardziej wygodna i bezstresowa. Nasz profesjonalny zespół kierowców zadba
+                        o bezpieczny i komfortowy przewóz zarówno na spotkania biznesowe, jak i prywatne wydarzenia.<br><br>
+
+                        Obsługa Wydarzeń Okolicznościowych<br>
+                        Tedicars specjalizuje się także w obsłudze wydarzeń okolicznościowych, takich jak wesela, wieczory kawalerskie, imprezy firmowe
+                        i inne wyjątkowe okazje. Nasze samochody, w tym Mercedes S-Klasa AMG, BMW 740xd czy Jaguar F-Type R, idealnie sprawdzą się jako
+                        transport na specjalne okazje, zapewniając nie tylko wygodę, ale i prestiż.
+                    </p>
                 </div>
             </div>
         </div>
@@ -111,8 +153,8 @@
                                         <span class="fa fa-trophy fa-2x" style="color: #1c1c1c"></span>
                                     </div>
                                     <div class="ms-4">
-                                        <h5 class="mb-3">Wyjątkowa flota</h5>
-                                        <p class="mb-0">Oferujemy nietuzinkowe samochody, nasza flota wybierana jest pod kątem maksymalnych osiągów oraz wygody</p>
+                                        <h5 class="mb-3">Wyjątkowa flota pojazdów</h5>
+                                        <p class="mb-0">Oferujemy wybór nowoczesnych, różnorodnych modeli, które spełniają różne potrzeby klientów, od sportowych po luksusowe.</p>
                                     </div>
                                 </div>
                             </div>
@@ -122,8 +164,8 @@
                                         <span class="fa fa-tag fa-2x" style="color: #1c1c1c"></span>
                                     </div>
                                     <div class="ms-4">
-                                        <h5 class="mb-3">Najwyższa jakość</h5>
-                                        <p class="mb-0">Samochód wydajemy czysty, wyprany, pachnący, zatankowany i w 100% sprawny, gotowy by sprawiać przyjemnośc z jazdy</p>
+                                        <h5 class="mb-3">Atrakcyjna i elastyczna oferta</h5>
+                                        <p class="mb-0">Nasze plany wynajmu są dostosowane do indywidualnych potrzeb klientów, z możliwością wynajmu krótko i długoterminowego.</p>
                                     </div>
                                 </div>
                             </div>
@@ -137,8 +179,8 @@
                             <div class="col-12 wow fadeInUp" data-wow-delay="0.3s">
                                 <div class="feature-item justify-content-end">
                                     <div class="text-end me-4">
-                                        <h5 class="mb-3">Podstawienie i odbiór</h5>
-                                        <p class="mb-0">Dowieziemy i odbierzemy samochód na terenie Polski przy dłuższym najmie</p>
+                                        <h5 class="mb-3">Dostarczenie i odbiór auta</h5>
+                                        <p class="mb-0">Możliwość podstawienia i odbioru auta pod wskazany przez klienta adres.</p>
                                     </div>
                                     <div class="feature-icon">
                                         <span class="fa fa-map-pin fa-2x" style="color: #1c1c1c"></span>
@@ -148,8 +190,11 @@
                             <div class="col-12 wow fadeInUp" data-wow-delay="0.3s">
                                 <div class="feature-item justify-content-end">
                                     <div class="text-end me-4">
-                                        <h5 class="mb-3">Wsparcie 24/7</h5>
-                                        <p class="mb-0">Jesteśmy dostępni pod telefonem by udzielić wszelkiego wsparcia w trakcie trwania najmu</p>
+                                        <h5 class="mb-3">Najwyższa jakość</h5>
+                                        <p class="mb-0">Wszystkie nasze pojazdy są regularnie serwisowane, czyste i wyposażone w nowoczesne
+                                            systemy bezpieczeństwa, co gwarantuje komfortową i bezpieczną podróż. Zapewniamy kompleksową obsługę
+                                            klienta, w tym pomoc w razie awarii czy pytań dotyczących wynajmu.
+                                        </p>
                                     </div>
                                     <div class="feature-icon">
                                         <span class="fa fa-road fa-2x" style="color: #1c1c1c"></span>
@@ -162,7 +207,7 @@
             </div>
         </div>
 
-        <!-- Car Steps -->
+        <!-- Reservation Process -->
         <div class="container-fluid steps py-5">
             <div class="container py-5">
                 <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 800px;">
@@ -179,14 +224,14 @@
                     <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="steps-item p-4 mb-4">
                             <h4 class="text-primary">Zaliczka</h4>
-                            <p class="mb-0">Wykonanie przelewu bankowego kwoty zaliczki.</p>
+                            <p class="mb-0">Aby zarezerwować pojazd, prosimy o symboliczny przelew zaliczki na poczet najmu.</p>
                             <div class="setps-number">02.</div>
                         </div>
                     </div>
                     <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.5s">
                         <div class="steps-item p-4 mb-4">
                             <h4 class="text-primary">Odbiór pojazdu</h4>
-                            <p class="mb-0">Umówienie terminu odbioru samochodu, podpisanie umowy i przekazanie kluczyków.</p>
+                            <p class="mb-0">Umówienie terminu odbioru samochodu lub terminu i miejsca jego dostarczenia (wg. ustaleń), podpisanie umowy i przekazanie kluczyków.</p>
                             <div class="setps-number">03.</div>
                         </div>
                     </div>
