--- a/flota.html
+++ b/flota.html
@@ -62,7 +62,7 @@
             <!-- Navigation -->
             <nav class="navbar navbar-expand-lg navbar-light flex-column flex-lg-row justify-content-between align-items-stretch align-items-lg-center px-3 py-2 px-xl-5">
                 <div class="d-flex justify-content-between justify-content-lg-around">
-                    <a href="" class="navbar-brand">
+                    <a href="#" class="navbar-brand">
                         <img src="img/napis.png" class="img-fluid" alt="Tedicars logo">
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
